<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:titleTextColor="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_scan"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/btn_bg"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:text="@string/click_to_scan"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/btn_bg"
                    android:orientation="horizontal"
                    android:text="@string/click_to_save"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/linear1">
                <Spinner
                    android:id="@+id/spinner_address"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:background="@drawable/spinner_border"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp" />
                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:background="@drawable/spinner_border"
                    android:gravity="center"
                    android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_scan_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_sum"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_save_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unsaved"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/epc_list"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    </LinearLayout>
</LinearLayout>